Fix word wrapping style problem with side menu

--- a/_sass/documentation.sass
+++ b/_sass/documentation.sass
@@ -10,12 +10,13 @@ img.cycle-home-logo
 .side-menu
     position: fixed
     top: $normal-space
-    width: $side-menu-width
     height: 100%
     overflow: hidden
     font-size: 3vh
     a
         +anchor_style($black)
+    nav ul
+        white-space: nowrap
 
 .paginator
     a
